# todolist

./: .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
requirements/: requirements-develop.txt  requirements-prod.txt
setup/: asgi.py  urls.py  wsgi.py
setup/settings/: base.py  development.py  production.py
tasks/: models.py  serializers.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_rename_done_task_status.py  0003_rename_status_task_done.py  0004_alter_task_options.py
tasks/tests/: test_forms.py  test_models.py  test_serializers.py
todo/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
todo/migrations/: 0001_initial.py  0002_rename_done_task_status.py  0003_rename_status_task_done.py  0004_alter_task_options.py
todo/tests/: test_forms.py  test_models.py  test_serializers.py  test_views.py
todolist/: urls.py
todolist/settings/: .env.dist  base.py  development.py
